# dragonfly-patterner

./: .gitignore  .gitignore.bak  README.md  guide.txt  pyproject.toml  start.txt
R/: IMP_using_genus_records.R  aesh.R  bad_segs.R  getGenusList.R  get_lost_ids.R  import_infers.R  mergeAnnotations.R  moveSelectImages.R  pca stuff.R  plot_records_discrep.R  run_from_R.R  scratch.R  scratch_commands.R  sdms_phy_wings.R  seg_training_results.R  sp_tree_to_genus_tree.R  test_merge_imgs_to_records.R  wing_data_tuple.rds  wings_phylo.rds
R/analyses/: analyze_antheads.R  clade_counts.R  colordistance_plots.R  extract_color_stats_df.R  filesize_info.R  misc_counts.R  shared_annotation_comparison.R
R/color-extraction/: getColorsAndCoverage.R
R/data/: faces_tnsr.RData  odonata.tre  percher_flyer.csv
R/inst/: analyze_wings_for_rob.R  ant_counts.R  bugfix_checks.R  check_exclusive_training.R  ica.R  (+15 more)
annotations/: odo_view_annot.ias  odo_view_annot_old.ias  readme.txt  sioux_segment_helper.ijm
data/: .gitignore  annotations.csv  inferences.csv  readme.txt  train_metadata.csv
downloaders/: addAnnotations.py  downloadGenusImages.py  downloadRandomSingleImages.py  genus_list.csv
dpR/: scratch_commands.R
pipeline/: create_2class_models.py  create_3class_model.py  create_training_task.py  end_training_task.py  helpers.py  infer_2class_multistep.py  infer_3_class.py  infer_3class_multistep.py  readme.txt  sourceRdefs.py
trainset_tasks/: ana_session.csv.csv  ana_session.csv.ia_sess  ana_session.csv.log.bak-1  annots_seed.csv  odo_view_annot_V3.ias  sioux_segment_helper.ijm
(+430 files in other folders)
